--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "start": "node start.js",
+    "start": "node server.js",
     "test": "mocha specs"
   },
   "engines": {
